# poke-graph

./: .gitignore  pokemon_ontology.drawio  pyproject.toml
data/: item.ttl  moves.ttl  types.ttl
data/battles/: Barcelona Pokémon VGC Special Event 2024 Masters Standings September 16-17, 2023.json  Bologna Pokémon VGC Special Event 2024 Masters Standings June 1-2, 2024 masters.json  Brisbane Pokémon VGC Regional Championship 2024 Masters Standings November 25-26, 2023.json  Charlotte Pokémon VGC Regional Championship Masters Standings March 24–26, 2023.json  Charlotte Pokémon VGC Regional Championships 2024 Masters Standings January 19-21, 2024.json  Curitiba Pokémon VGC Regional Championship 2024 Masters Standings September 23-24, 2023.json  Dortmund Pokémon VGC Regional Championship 2024 Masters Standings February 10-11, 2024.json  Europe Pokémon VGC International Championship 2024 Masters Standings April 5-7, 2024.json  Europe Pokémon VGC International Championship Masters Standings April 14–16, 2023.json  Fort Wayne Pokémon VGC Regional Championship Masters Standings March 31–April 2, 2023.json  Fresno Pokémon VGC Regional Championship Masters Standings June 10–11, 2023.json  Goiânia Pokémon VGC Regional Championship 2024 Masters Standings March 9-10, 2024.json  Hartford Pokémon VGC Regional Championship Masters Standings May 19–21, 2023.json  Indianapolis Pokémon VGC Regional Championship 2024 Masters Standings May 3-5, 2024.json  (+32 more)
ontology/: basic_ontology.drawio  no_entities.ttl
poke_graph/: main.py
poke_graph/clients/: pokemonapi_client.py
(+8 files in other folders)
