[tool.poetry]
name = "poke-graph"
version = "0.1.0"
description = ""
authors = ["Cus, Tibor <cus.tibor@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
requests-cache = "^1.2.1"
tqdm = "^4.66.4"
cattrs = "^23.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
